# siera-cli

./: .gitignore  ;  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo-old.toml  Cargo.toml  Dockerfile  LICENSE  Makefile  PKGBUILD  README.md  cli.yaml  default.conf  default.json  design.md  docker-compose.acapy.yml  example.json  rust-toolchain.toml  tags  webhooks.rs
.cargo/: config.toml
.github/: codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: aur-release.yml  brew-release.yml  build-all-platforms.yml  build-and-release.yml  build.yml  check.yml  choco-release.yml  code-coverage.yml  coverage.yml  crates-release.yml  e2e-test.yml  e2e-tests.yml  lint.yml  metrics.yml  release.yml  test.yml
agent/: Cargo.toml
agent-controller/: Cargo.toml
agent-controller/src/: cloud_agent.rs  error.rs  lib.rs  web.rs
agent-controller/src/agent_python/: agent.rs  connections.rs  credential_definition.rs  credentials.rs  endpoints.rs  features.rs  message.rs  mod.rs  schema.rs
agent-controller/src/modules/: connections.rs  credential_definition.rs  credentials.rs  features.rs  message.rs  mod.rs  schema.rs
agent/src/: agent.rs  agent_python.rs  cloud_agent.rs  error.rs  lib.rs
agent/src/agent_python/: agent.rs  connections.rs  features.rs  mod.rs  schema.rs
agent/src/modules/: connection.rs  connections.rs  credential.rs  credential_definition.rs  credentials.rs  features.rs  mod.rs  schema.rs
agent/src/utils/: web.rs
animo/siera-cli/: README.md
animo/siera-cli/ghrs-data/: forks.csv  stargazers.csv  views_clones_aggregate.csv
animo/siera-cli/ghrs-data/snapshots/: 2023-11-21_131404_top_paths_snapshot.csv  2023-11-21_131404_top_referrers_snapshot.csv  2023-11-21_131404_views_clones_series_fragment.csv
animo/siera-cli/latest-report/: report.html  report.md  report_for_pdf.html
automations/: Cargo.toml
automations/src/automations/: credential_offer.rs  mod.rs
choco/: agent-cli.nuspec  modify_nuspec.py
cli/: Cargo.toml
cli/src/: cli.rs  error.rs  help_strings.rs  main.rs  register.rs
cli/src/modules/: automation.rs  configuration.rs  connection.rs  connections.rs  credential.rs  credential_definition.rs  credentials.rs  feature.rs  features.rs  message.rs  mod.rs  proof.rs  schema.rs  workflow.rs
cli/src/utils/: config.rs  help.rs  loader.rs  logger.rs  mod.rs  qr.rs
cli/src/workflows/: mod.rs  offer_credential.rs
cli/src/workflows/examples/: mod.rs  offer_credential.rs
cloudagent-python/: Cargo.toml
cloudagent-python/src/: cloud_agent.rs  web.rs
cloudagent-python/src/agent_python/: agent.rs  connection.rs  connections.rs  credential.rs  credential_definition.rs  credentials.rs  features.rs  message.rs  mod.rs  proof.rs  schema.rs
crates/afj-rest/: Cargo.toml
crates/afj-rest/src/: agent.rs  lib.rs  macros.rs  web.rs
crates/afj-rest/src/cloudagent/: basic_message.rs  connection.rs  credential_definition.rs  mod.rs  schema.rs
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  error.rs  lib.rs
crates/agent/src/modules/: basic_message.rs  connection.rs  credential.rs  credential_definition.rs  feature.rs  json_ld.rs  message.rs  mod.rs  multitenancy.rs  oob.rs  proof.rs  schema.rs  wallet.rs  webhook.rs  webhooks.rs
crates/automations/: Cargo.toml
crates/automations/src/: error.rs  lib.rs
crates/automations/src/automations/: create_credential_definition.rs  credential_offer.rs  mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  error.rs  help_strings.rs  macros.rs  main.rs  register.rs
crates/cli/src/modules/: automation.rs  basic_message.rs  configuration.rs  connection.rs  credential.rs  credential_definition.rs  feature.rs  json_ld.rs  message.rs  mod.rs  multitenancy.rs  oob.rs  proof.rs  schema.rs  wallet.rs  webhook.rs  webhooks.rs
crates/cli/src/utils/: config.rs  loader.rs  logger.rs  mod.rs  qr.rs
crates/cloudagent-python/: Cargo.toml
crates/cloudagent-python/src/: agent.rs  cloud_agent.rs  lib.rs  macros.rs  web.rs
crates/cloudagent-python/src/agent_python/: agent.rs  basic_message.rs  connection.rs  feature.rs  message.rs  mod.rs  multitenancy.rs  schema.rs
crates/cloudagent-python/src/cloudagent/: basic_message.rs  connection.rs  credential.rs  credential_definition.rs  feature.rs  json_ld.rs  mod.rs  multitenancy.rs  oob.rs  proof.rs  schema.rs  wallet.rs  webhook.rs  webhooks.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs  macros.rs
crates/webhooks/: Cargo.toml
crates/webhooks/src/: lib.rs
docker/: docker-compose.acapy.min.yml  docker-compose.acapy.with-ledger.yml  docker-compose.acapy.yml  ledgers.yaml
docs/: README.md  SUMMARY.md  advanced_installation.md  configuration.md  contributing.md  support_matrix.md
docs/automations/: introduction.md  usage.md
docs/community/: contributing.md  roadmap.md
docs/features/: connections.md  credential-definitions.md  credentials.md  environments.md  features.md  introduction.md  messages.md  proof.md  schemas.md
docs/guides/: configuration.md  installation.md  using-siera.md  using-the-agent-cli.md  using-the-aries-cli.md
example/: config.ini  config.yaml  example.ini  flow.sh  invite.sh  issue-credential.sh  test.ini  test.yaml  x.ini
pkg/: .SRCINFO  PKGBUILD
pkg/choco/: agent-cli.nuspec  modify_nuspec.py  siera.nuspec
pkg/choco/tools/: VERIFICATION.txt
src/: agent.rs  cli.rs  error.rs  main.rs  parse.rs  typing.rs  util.rs
src/agent/: agent.rs  agents.rs  http_agent.rs  mod.rs
src/cli/: agent.rs  configuration.rs  connections.rs  credential_definition.rs  feature.rs  features.rs  invite.rs  issue_credential.rs  message.rs  mod.rs  register.rs  schema.rs  workflow.rs
src/mediator/: cli.rs
src/run/: cli.rs
src/utils/: config.rs  http.rs  logger.rs  mod.rs  parse.rs  qr.rs
tests/: Cargo.toml  README.md  connection_e2e.rs  e2e.rs  e2e_README.md  helpers.rs  macros.rs  run.sh
tests/utils/: helpers.rs
workflow/: Cargo.toml
workflow/src/: error.rs  lib.rs
workflow/src/workflows/: credential_offer.rs  mod.rs  workflow.rs
