[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
  "Berend Sliedrecht <berend@animo.id>",
  "Moritz Schlichting <moritz@animo.id>",
  "Jean-Louis Leysens <jean-louis@animo.id>",
]
description = "Siera is a toolkit that allows you to interact with a Hyperledger Aries Cloud agent."
homepage = "https://siera.animo.id"
documentation = "https://docs.siera.animo.id"
repository = "https://github.com/animo/siera-cli"
categories = ["command-line-utilities"]
license = "Apache-2.0"
readme = "./README.md"
