[package]
authors = ["Animo Solutions"]
description = "A simple Aries Cloudagent Controller"
edition = "2021"
homepage = "https://animo.id"
keywords = ["aries", "cloudagent", "controller", "cli-tool"]
license = "Apache-2.0"
name = "agent-controller"
readme = "README.md"
repository = "https://github.com/animo/aries-cli"
version = "0.2.0"

[dependencies]
async-trait = "0.1.51"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
