[package]
authors = ["Animo Solutions"]
description = "Aries Agent module"
edition = "2021"
homepage = "https://aries-cli.animo.id"
keywords = ["aries", "cloudagent", "controller", "cli-tool"]
license = "Apache-2.0"
name = "agent"
readme = "../README.md"
repository = "https://github.com/animo/aries-cli"
version = "0.1.0"

[dependencies]
async-trait = "0.1.51"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
