[package]
authors = ["Animo Solutions"]
description = "A simple Aries Cloudagent Controller CLI interface"
edition = "2021"
homepage = "https://aries-cli.animo.id"
keywords = ["aries", "cloudagent", "controller", "cli-tool"]
license = "Apache-2.0"
name = "automations"
readme = "../README.md"
repository = "https://github.com/animo/aries-cli"
version = "0.2.0"

[dependencies]
cloudagent-python = {path = "../cloudagent-python"}
colored = "2.0.0"
agent = {path = "../agent"}
async-trait = "0.1.51"
log = "0.4.14"
