[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent = { path = "../agent"}
clipboard = "0.5.0"
colored = "2.0.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"