[package]
name = "cli"
authors = ["Animo Solutions"]
description = "A simple Aries Cloudagent Controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent = { path = "../agent"}
clipboard = "0.5.0"
colored = "2.0.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
clap = { version = "3.1.0", features = ["derive"] }
tokio = {version = "1", features = ["full"]}
rust-ini = "0.17.0"
