[package]
authors = ["Animo Solutions"]
categories = ["cli"]
description = "A simple Aries Cloudagent Controller CLI interface"
edition = "2021"
homepage = "https://animo.id"
keywords = ["aries", "cloudagent", "controller", "cli-tool"]
license = "Apache-2.0"
name = "cli"
readme = "README.md"
repository = "https://github.com/animo/aries-cli"
version = "0.2.0"

[[bin]]
name = "aries-cli"
path = "src/main.rs"

[dependencies]
agent-controller = {path = "../agent-controller"}
clap = {version = "3.1.0", features = ["derive"]}
clipboard = "0.5.0"
colored = "2.0.0"
qr2term = "0.2.2"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
serde_yaml = "0.8.23"
tokio = {version = "1", features = ["full"]}
