[package]
authors = ["Animo Solutions"]
description = "A simple Aries Cloudagent Controller"
edition = "2021"
homepage = "https://agent-cli.animo.id"
keywords = ["aries", "cloudagent", "controller", "cli-tool"]
license = "Apache-2.0"
name = "cloudagent-python"
readme = "README.md"
repository = "https://github.com/animo/agent-cli"
version = "0.1.0"

[dependencies]
agent = { path = "../agent"}
async-trait = "0.1.51"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
log = "0.4.14"
