[package]
authors = ["Animo Solutions"]
description = "A simple Aries Cloudagent Controller CLI interface"
edition = "2021"
homepage = "https://aries-cli.animo.id"
keywords = ["aries", "cloudagent", "controller", "cli-tool"]
license = "Apache-2.0"
name = "workflow"
readme = "../README.md"
repository = "https://github.com/animo/aries-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudagent-python = {path = "../cloudagent-python"}
colored = "2.0.0"
agent = {path = "../agent"}
async-trait = "0.1.51"
log = "0.4.14"
