[package]
name = "siera-afj-rest"
description = "Hyperledger Aries Framework JavaScript Rest controller."

version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
siera-agent = { path = "../agent" }
siera-logger = { path = "../logger" }
async-trait = "0.1.51"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
