[package]
name = "siera-afj-rest"
description = "Hyperledger Aries Framework JavaScript Rest controller."

version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
siera-agent = { path = "../agent", version = "0.*" }
siera-logger = { path = "../logger", version = "0.*" }
async-trait = "0.1.74"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
