[package]
name = "siera-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
async-trait = "0.1.51"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
