[package]
name = "siera-agent"
description = "Structures and traits related to an Aries agent."

version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
async-trait = "0.1.74"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
