[package]
name = "siera-automations"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
siera-cloudagent-python = { path = "../cloudagent-python" }
siera-logger = { path = "../logger" }
siera-agent = { path = "../agent" }
colored = "2.0.0"
async-trait = "0.1.51"
