[package]
name = "siera-automations"
description = "Automations written for an Aries Cloudagent Python agent."

version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
siera-cloudagent-python = { path = "../cloudagent-python", version = "0.*" }
siera-logger = { path = "../logger", version = "0.*" }
siera-agent = { path = "../agent", version = "0.*" }
colored = "2.0.0"
async-trait = "0.1.51"
