[package]
name = "siera"

description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
siera-agent = { path = "../agent" }
siera-automations = { path = "../automations" }
siera-afj-rest = { path = "../afj-rest" }
siera-cloudagent-python = { path = "../cloudagent-python" }
siera-logger = { path = "../logger" }
base64 = "0.13.0"
clap = { version = "3.1.0", features = ["derive"] }
clipboard = "0.5.0"
colored = "2.0.0"
qr2term = "0.2.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.23"
tokio = { version = "1", features = ["full"] }
