[package]
name = "siera"

description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
siera-agent = { path = "../agent", version = "0.*" }
siera-automations = { path = "../automations", version = "0.*" }
siera-afj-rest = { path = "../afj-rest", version = "0.*" }
siera-cloudagent-python = { path = "../cloudagent-python", version = "0.*" }
siera-logger = { path = "../logger", version = "0.*" }
base64 = "0.13.0"
clap = { version = "4.2.3", features = ["derive"] }
colored = "2.0.0"
qr2term = "0.2.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.23"
tokio = { version = "1", features = ["full"] }
