[package]
name = "siera"

description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
siera-agent = { path = "../agent", version = "0.*" }
siera-automations = { path = "../automations", version = "0.*" }
siera-afj-rest = { path = "../afj-rest", version = "0.*" }
siera-cloudagent-python = { path = "../cloudagent-python", version = "0.*" }
siera-logger = { path = "../logger", version = "0.*" }
base64 = "0.21.5"
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"
qr2term = "0.3.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
tokio = { version = "1.34.0", features = ["full"] }
