[package]
name = "cloudagent-python"
version = "0.0.0"
edition = "2021"

[dependencies]
agent = { path = "../agent" }
logger = { path = "../logger" }
async-trait = "0.1.51"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tungstenite = {version = "0.17.2", features = ["native-tls"]}
