[package]
name = "siera-logger"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
clipboard = "0.5.0"
serde = { version = "1.0.130", features = ["derive"] }
lazy_static = "1.4.0"
serde_json = "1.0.68"
colored = "2.0.0"
