[package]
name = "siera-logger"
description = "Logger for Siera."

version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
cli-clipboard = "0.4.0"
xcb = "1.2.0"
serde = { version = "1.0.130", features = ["derive"] }
lazy_static = "1.4.0"
serde_json = "1.0.68"
colored = "2.0.0"
