[package]
name = "siera-logger"
description = "Logger for Siera."

version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
cli-clipboard = "0.4.0"
colored = "2.0.4"
lazy_static = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
xcb = "1.2.2"
