[package]
name = "webhooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = {version = "0.17.3", features = ["native-tls"]}
url = "2.2.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
colored = "2.0.0"